# SpiralSafe

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  .scripts_sign_session.py  .secrets.baseline  01_THE_BRIDGE.md  02_SAFE_SPIRAL_CONSOLIDATED.md  07_FAILURE_MODES_AND_RECOVERY.md  ACKNOWLEDGEMENTS.md  ANSWER_V_C_PARADOX_PR.md  ARCHITECTURE.md  ATOM_IMPLEMENTATION_COMPLETE.md  ATOM_IMPLEMENTATION_SUMMARY.md  ATOM_IMPLEMENTATION_TRAIL.md  Anthropic Fellows Application - Safety.htm  Anthropic Fellows Application - Safety_complete.htm  Anthropic Fellows_ Application Received 2026-01-12T01_08_05+11_00.eml  B&&P  Bootstrap.ps1  CLAUDE_CODE_ANALYSIS_README.md  CODEOWNERS  CONSTRAINT_MATHEMATICS.md  CONTRIBUTING.md  CORPUS_INDEX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DIAGRAMS.md  GLOSSARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  KENL_ECOSYSTEM_TITLE_PAGE.md  LICENSE  LOGDY_DEPLOYMENT_GUIDE.md  MAGNUM_OPUS.md  PART_3_OBJECTIVE_ANALYSIS_SPIRAL.md  PORTFOLIO.md  (+36 more)
.atom/: trail.jsonl
.atom-trail/: gate-evolution.jsonl  gate-transitions.jsonl  provenance-tracking.jsonl
.claude/: BUILD_ORIENTATION.md  CASCADE_TASKS.md  CONTEXT.md  MCP_SECURITY_NOTES.md  ORIENTATION.md  PARALLEL_SESSION_CONTEXT.md  RELEASE_PLAN.md  last_atom  mcp-servers.json
.github/: AGENTS.md  PORTFOLIO_COMPLETION.md  PULL_REQUEST_TEMPLATE.md  RULESETS.md  SECRETS.md  SIGNATURE.md  copilot-instructions.md  dependabot.yml
.spiralsafe/: atom-trail-example.jsonl  atom-trail.jsonl
.verification/: session-15f3bbe1-5b0a-4e00-98eb-ba4979b25521.json  session-signout-20260107.json  (+7 more)
bridges/: Dockerfile  README.md  __init__.py  hologram-bridge.py  package-lock.json  pyproject.toml  requirements.txt  setup.py  tartarus-bridge.py  test_integration.py  validate_implementation.py
bridges/atom/: __init__.py  atom_trail.py
bridges/hologram/: __init__.py  hologram_device.py
bridges/kenl/: __init__.py  orchestrator.py  test_orchestrator.py
bridges/saif_npc/: __init__.py  finetuner.py  saif_npc.py  teleprompter.py  test_saif_npc.py
bridges/signal-bridge/: .env.example  .gitignore  README.md  docker-compose.yml  package.json
bridges/signal-bridge/src/: index.ts
bridges/spiralsafe_bridges.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridges/tartarus/: __init__.py  tartarus_device.py
bridges/utils/: __init__.py
(+635 files in other folders)
