[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiralsafe-bridges"
version = "0.1.0"
description = "Hardware integration bridges for SpiralSafe ecosystem (ATOM trail, Hologram, Tartarus Pro, KENL Orchestrator)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hope&&Sauced Collaborative"},
]
keywords = ["spiralsafe", "atom", "hologram", "tartarus", "kenl", "orchestrator", "hardware", "bridge", "async", "dspy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]

dependencies = [
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]
all = ["spiralsafe-bridges[dev]"]

[project.urls]
Homepage = "https://github.com/toolate28/SpiralSafe"
Documentation = "https://github.com/toolate28/SpiralSafe/blob/main/bridges/README.md"
Repository = "https://github.com/toolate28/SpiralSafe"
"Bug Tracker" = "https://github.com/toolate28/SpiralSafe/issues"

[project.scripts]
spiralsafe-atom = "atom.atom_trail:main"
spiralsafe-hologram = "hologram.hologram_device:main"
spiralsafe-tartarus = "tartarus.tartarus_device:main"
spiralsafe-kenl = "kenl.orchestrator:main"
spiralsafe-validate = "validate_implementation:main"

[tool.setuptools]
packages = ["atom", "hologram", "tartarus", "kenl"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["atom", "hologram", "tartarus", "kenl"]
omit = ["tests/*", "setup.py", "validate_implementation.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
